attempt to resolve margin collapse issue

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ p ,h1 ,h2 {
 
 #midm {
     background-color: #101820FF;
+    margin-top: 0.5px;
 }
 
 
